--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^8.3.2",
     "socket.io": "^4.7.5"
   }
 }
