--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/app.js ",
-    "dev": "node ./src/app.js"
+    "start": "node ./src/app.js ",
+    "dev": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
