--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "node ./src/app.js ",
     "dev": "nodemon ./src/app.js"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
