--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "start": "node ./src/app.js ",
     "dev": "nodemon ./src/app.js"
   },
-  "engines": {
-    "node": "16.x"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,6 +16,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "mongoose": "^8.3.2",
+    "mongoose-paginate-v2": "^1.8.0",
     "socket.io": "^4.7.5"
   }
 }
