--- a/src/.env.sample
+++ b/src/.env.sample
@@ -3,5 +3,7 @@ PERSISTENCE=
 MONGO_URL=
 DB_NAME=
 SECRET=
-CLIENT_ID_GITHUB =
-CLIENT_SECRET_GITHUB =
+CLIENT_ID_GITHUB=
+CLIENT_SECRET_GITHUB=
+PASSWORD_GMAIL_NODEMAILER=
+USER_GMAIL_NODEMAILER=
