--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "desafios_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "jest",
@@ -21,7 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-compression": "^1.0.2",
-    "express-handlebars": "^7.1.2",
+    "express-handlebars": "^7.1.3",
     "express-session": "^1.18.0",
     "mongoose": "^8.3.2",
     "mongoose-paginate-v2": "^1.8.0",
