--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-compression": "^1.0.2",
     "express-handlebars": "^7.1.3",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "mongoose-paginate-v2": "^1.8.0",
     "nodemailer": "^6.9.14",
